--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -37,20 +37,63 @@
     margin-bottom:11px;
   }
   
-  h3 {
+  .amenities h3, .locations h3 {
     font-weight: 600;
     margin:0px;
     margin-top:17px;
     padding:0px;
   }
 
-  h4 {
+  .amenities h4, .locations h4 {
     margin:0px;
     padding:0px;
     font-weight:400;
     font-size:14px;
   }
 
+  .popover {
+    visibility:hidden;
+    position: relative;
+    background-color:#FAFAFA;
+    border:solid #DDDDDD 1px;
+    border-radius:4px;
+    margin-top:7%;
+    padding-bottom:10%;
+    z-index:1;
+  }
+
+  .popover li h2 {
+    padding:0;
+    margin:0;
+}
+
+.popover_list {
+    padding:0px;
+    margin:0px;
+    padding-left:10%;
+}
+
+li {
+    list-style-type:none;
+    padding-bottom:5%;
+}
+
+ul {
+    padding-top:30px;
+}
+
+.locations:hover >.popover {
+    visibility:visible;
+    margin-bottom:50px;
+}
+
+.amenities:hover > .popover {
+    visibility:visible;
+}
+
+ul {
+    list-style:none;
+  }
   section.filters button:hover {
     opacity: 0.9;
   }
